# learning-sonarqube-semgrep-snyk

./: .gitignore  CHEATSHEET.md  README.md  docker-compose.yml
docs/: 00-environment-setup.md  01-basic-python-app.md  02-sonarqube-concept-and-config.md  03-fixing-code-smells.md  04-semgrep-intro-and-rules.md  05-custom-semgrep-rules.md  06-snyk-auth-and-scanning.md  07-remediating-vulnerabilities.md  08-github-actions-pipeline.md  09-quality-gate-enforcement.md
examples/basic-app/: main.py  pyproject.toml
examples/final-project/: main.py  pyproject.toml
