[tool.poetry]
name = "basic-app"
version = "0.1.0"
description = "Vulnerable Python Application for DevSecOps Learning"
authors = ["DevSecOps Learner <student@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.85.0"
uvicorn = "0.18.2"
requests = "2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
